--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,13 @@
         <artifactId>spring-context</artifactId>
         <version>4.1.7.RELEASE</version>
       </dependency>
+      <!-- https://mvnrepository.com/artifact/org.springframework/spring-expression -->
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-expression</artifactId>
+          <version>4.1.7.RELEASE</version>
+      </dependency>
+
       <!-- 2)Spring DAO层 -->
       <dependency>
         <groupId>org.springframework</groupId>
@@ -115,7 +122,50 @@
         <artifactId>spring-test</artifactId>
         <version>4.1.7.RELEASE</version>
       </dependency>
+      <!-- 5)Spring aop -->
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-aop</artifactId>
+          <version>4.1.7.RELEASE</version>
+      </dependency>
+      <!-- https://mvnrepository.com/artifact/org.springframework/spring-aspects -->
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-aspects</artifactId>
+          <version>4.1.7.RELEASE</version>
+      </dependency>
+      <!-- https://mvnrepository.com/artifact/aopalliance/aopalliance -->
+      <dependency>
+          <groupId>aopalliance</groupId>
+          <artifactId>aopalliance</artifactId>
+          <version>1.0</version>
+      </dependency>
 
+      <!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
+      <dependency>
+          <groupId>org.aspectj</groupId>
+          <artifactId>aspectjweaver</artifactId>
+          <version>1.6.8</version>
+      </dependency>
+
+
+
+
+      <dependency>
+          <groupId>commons-fileupload</groupId>
+          <artifactId>commons-fileupload</artifactId>
+          <version>1.3.2</version>
+      </dependency>
+      <dependency>
+          <groupId>commons-io</groupId>
+          <artifactId>commons-io</artifactId>
+          <version>2.5</version>
+      </dependency>
+      <dependency>
+          <groupId>log4j</groupId>
+          <artifactId>log4j</artifactId>
+          <version>1.2.17</version>
+      </dependency>
       <!-- redis客户端:Jedis -->
       <dependency>
         <groupId>redis.clients</groupId>
@@ -139,7 +189,15 @@
         <artifactId>commons-collections</artifactId>
         <version>3.2</version>
       </dependency>
-    </dependencies>
+
+      <!-- https://mvnrepository.com/artifact/cglib/cglib-nodep -->
+      <dependency>
+          <groupId>cglib</groupId>
+          <artifactId>cglib-nodep</artifactId>
+          <version>2.2</version>
+      </dependency>
+
+  </dependencies>
 
     <build>
     <plugins>
@@ -155,6 +213,14 @@
             </webApp>
         </configuration>
     </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+                <source>1.7</source>
+                <target>1.7</target>
+            </configuration>
+        </plugin>
     </plugins>
 
       <finalName>ssm</finalName>
