--- a/pom.xml
+++ b/pom.xml
@@ -196,6 +196,16 @@
           <artifactId>cglib-nodep</artifactId>
           <version>2.2</version>
       </dependency>
+      <dependency>
+          <groupId>io.netty</groupId>
+          <artifactId>netty-transport</artifactId>
+          <version>4.1.23.Final</version>
+      </dependency>
+      <dependency>
+          <groupId>io.netty</groupId>
+          <artifactId>netty-codec-http</artifactId>
+          <version>4.1.23.Final</version>
+      </dependency>
 
   </dependencies>
 
