--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
       <dependency>
         <groupId>mysql</groupId>
         <artifactId>mysql-connector-java</artifactId>
-        <version>5.1.37</version>
+        <version>8.0.11</version>
         <scope>runtime</scope>
       </dependency>
       <dependency>
@@ -204,6 +204,11 @@
       <dependency>
           <groupId>io.netty</groupId>
           <artifactId>netty-codec-http</artifactId>
+          <version>4.1.23.Final</version>
+      </dependency>
+      <dependency>
+          <groupId>io.netty</groupId>
+          <artifactId>netty-handler</artifactId>
           <version>4.1.23.Final</version>
       </dependency>
 
