--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,13 @@
       </dependency>
 
 
+      <!-- lombok -->
+      <dependency>
+          <groupId>org.projectlombok</groupId>
+          <artifactId>lombok</artifactId>
+          <version>1.16.20</version>
+          <scope>provided</scope>
+      </dependency>
 
 
       <dependency>
@@ -212,6 +219,12 @@
           <version>4.1.23.Final</version>
       </dependency>
 
+      <!-- redis -->
+      <dependency>
+          <groupId>redis.clients</groupId>
+          <artifactId>jedis</artifactId>
+          <version>2.9.0</version>
+      </dependency>
   </dependencies>
 
     <build>
