--- a/pom.xml
+++ b/pom.xml
@@ -24,11 +24,16 @@
       </dependency>
 
       <!-- 2.数据库 -->
-      <dependency>
+      <!--<dependency>
         <groupId>mysql</groupId>
         <artifactId>mysql-connector-java</artifactId>
         <version>8.0.11</version>
         <scope>runtime</scope>
+      </dependency>-->
+      <dependency>
+          <groupId>mysql</groupId>
+          <artifactId>mysql-connector-java</artifactId>
+          <version>5.1.40</version>
       </dependency>
       <dependency>
         <groupId>c3p0</groupId>
@@ -141,6 +146,13 @@
           <version>1.0</version>
       </dependency>
 
+      <!-- json部分 -->
+      <dependency>
+          <groupId>com.alibaba</groupId>
+          <artifactId>fastjson</artifactId>
+          <version>1.2.28</version>
+      </dependency>
+
       <!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
       <dependency>
           <groupId>org.aspectj</groupId>
@@ -245,8 +257,8 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
             <configuration>
-                <source>1.7</source>
-                <target>1.7</target>
+                <source>1.8</source>
+                <target>1.8</target>
             </configuration>
         </plugin>
     </plugins>
